--- a/pitch-roulette/package.json
+++ b/pitch-roulette/package.json
@@ -2,11 +2,12 @@
   "name": "pitch-roulette",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://nardo88.github.io/pitch-roulette/",
+  "homepage": "https://nardo88.github.io/pitch-roulette/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "node-sass": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
